@@ -30,114 +30,120 @@ import nl.ramsolutions.sw.magik.api.MagikGrammar;
 import nl.ramsolutions.sw.magik.parser.MagikCommentExtractor;
 import nl.ramsolutions.sw.magik.parser.TypeDocParser;
 
-/**
- * Method definition parser.
- */
+/** Method definition parser. */
 public class MethodDefinitionParser {
 
-    private final MagikAnalysisConfiguration configuration;
-    private final AstNode node;
+  private final MagikAnalysisConfiguration configuration;
+  private final AstNode node;
 
-    /**
-     * Constructor.
-     * @param node Method definition node.
-     */
-    public MethodDefinitionParser(final MagikAnalysisConfiguration configuration, final AstNode node) {
-        if (node.isNot(MagikGrammar.METHOD_DEFINITION)) {
-            throw new IllegalArgumentException();
-        }
-
-        this.configuration = configuration;
-        this.node = node;
+  /**
+   * Constructor.
+   *
+   * @param node Method definition node.
+   */
+  public MethodDefinitionParser(
+      final MagikAnalysisConfiguration configuration, final AstNode node) {
+    if (node.isNot(MagikGrammar.METHOD_DEFINITION)) {
+      throw new IllegalArgumentException();
     }
 
-    /**
-     * Parse defitions.
-     * @return List of parsed definitions.
-     */
-    public List<Definition> parseDefinitions() {
-        // Don't burn ourselves on syntax errors.
-        final AstNode syntaxErrorNode = this.node.getFirstChild(MagikGrammar.SYNTAX_ERROR);
-        if (syntaxErrorNode != null) {
-            return Collections.emptyList();
-        }
+    this.configuration = configuration;
+    this.node = node;
+  }
 
-        // Figure location.
-        final URI uri = this.node.getToken().getURI();
-        final Location location = new Location(uri, this.node);
+  /**
+   * Parse defitions.
+   *
+   * @return List of parsed definitions.
+   */
+  public List<Definition> parseDefinitions() {
+    // Don't burn ourselves on syntax errors.
+    final AstNode syntaxErrorNode = this.node.getFirstChild(MagikGrammar.SYNTAX_ERROR);
+    if (syntaxErrorNode != null) {
+      return Collections.emptyList();
+    }
 
-        // Figure module name.
-        final String moduleName = ModuleDefinitionScanner.getModuleName(uri);
+    // Figure location.
+    final URI uri = this.node.getToken().getURI();
+    final Location location = new Location(uri, this.node);
 
-        // Figure exemplar name & method name.
-        final MethodDefinitionNodeHelper helper = new MethodDefinitionNodeHelper(this.node);
-        final TypeString exemplarName = helper.getTypeString();
-        final String methodName = helper.getMethodName();
+    // Figure module name.
+    final String moduleName = ModuleDefinitionScanner.getModuleName(uri);
 
-        // Figure modifers.
-        final Set<MethodDefinition.Modifier> modifiers = new HashSet<>();
-        if (helper.isPrivateMethod()) {
-            modifiers.add(MethodDefinition.Modifier.PRIVATE);
-        }
-        if (helper.isIterMethod()) {
-            modifiers.add(MethodDefinition.Modifier.ITER);
-        }
-        if (helper.isAbstractMethod()) {
-            modifiers.add(MethodDefinition.Modifier.ABSTRACT);
-        }
+    // Figure exemplar name & method name.
+    final MethodDefinitionNodeHelper helper = new MethodDefinitionNodeHelper(this.node);
+    final TypeString exemplarName = helper.getTypeString();
+    final String methodName = helper.getMethodName();
 
-        // Figure parameters.
-        final TypeDocParser typeDocParser = new TypeDocParser(this.node);
-        final Map<String, TypeString> parameterTypes = typeDocParser.getParameterTypes();
-        final AstNode parametersNode = this.node.getFirstChild(MagikGrammar.PARAMETERS);
-        final List<ParameterDefinition> parameters =
-            this.createParameterDefinitions(moduleName, parametersNode, parameterTypes);
-        final AstNode assignmentParameterNode = node.getFirstChild(MagikGrammar.ASSIGNMENT_PARAMETER);
-        final ParameterDefinition assignmentParamter =
-            this.createAssignmentParameterDefinition(moduleName, assignmentParameterNode, parameterTypes);
+    // Figure modifers.
+    final Set<MethodDefinition.Modifier> modifiers = new HashSet<>();
+    if (helper.isPrivateMethod()) {
+      modifiers.add(MethodDefinition.Modifier.PRIVATE);
+    }
+    if (helper.isIterMethod()) {
+      modifiers.add(MethodDefinition.Modifier.ITER);
+    }
+    if (helper.isAbstractMethod()) {
+      modifiers.add(MethodDefinition.Modifier.ABSTRACT);
+    }
 
-        // Get return types from method docs.
-        final List<TypeString> callResultDocs = typeDocParser.getReturnTypes();
-        // Ensure we can believe the docs, sort of.
-        final boolean returnsAnything = helper.returnsAnything();
-        final ExpressionResultString callResult =
-            !callResultDocs.isEmpty()
-            || callResultDocs.isEmpty() && !returnsAnything
+    // Figure parameters.
+    final TypeDocParser typeDocParser = new TypeDocParser(this.node);
+    final Map<String, TypeString> parameterTypes = typeDocParser.getParameterTypes();
+    final AstNode parametersNode = this.node.getFirstChild(MagikGrammar.PARAMETERS);
+    final List<ParameterDefinition> parameters =
+        this.createParameterDefinitions(moduleName, parametersNode, parameterTypes);
+    final AstNode assignmentParameterNode = node.getFirstChild(MagikGrammar.ASSIGNMENT_PARAMETER);
+    final ParameterDefinition assignmentParamter =
+        this.createAssignmentParameterDefinition(
+            moduleName, assignmentParameterNode, parameterTypes);
+
+    // Get return types from method docs.
+    final List<TypeString> callResultDocs = typeDocParser.getReturnTypes();
+    // Ensure we can believe the docs, sort of.
+    final boolean returnsAnything = helper.returnsAnything();
+    final ExpressionResultString callResult =
+        !callResultDocs.isEmpty() || callResultDocs.isEmpty() && !returnsAnything
             ? new ExpressionResultString(callResultDocs)
             : ExpressionResultString.UNDEFINED;
 
-        // Get iterator types from method docs.
-        final List<TypeString> loopResultDocs = typeDocParser.getLoopTypes();
-        // Ensure method docs match actual loopbody, sort of.
-        final boolean hasLoopbody = helper.hasLoopbody();
-        final ExpressionResultString loopResult =
-            !loopResultDocs.isEmpty()
-            || loopResultDocs.isEmpty() && !hasLoopbody
+    // Get iterator types from method docs.
+    final List<TypeString> loopResultDocs = typeDocParser.getLoopTypes();
+    // Ensure method docs match actual loopbody, sort of.
+    final boolean hasLoopbody = helper.hasLoopbody();
+    final ExpressionResultString loopResult =
+        !loopResultDocs.isEmpty() || loopResultDocs.isEmpty() && !hasLoopbody
             ? new ExpressionResultString(loopResultDocs)
             : ExpressionResultString.UNDEFINED;
 
-        // Method doc.
-        final String doc = MagikCommentExtractor.extractDocCommentTokens(node)
+    // Method doc.
+    final String doc =
+        MagikCommentExtractor.extractDocCommentTokens(node)
             .map(Token::getValue)
-            .map(line -> line.substring(2))  // Strip '##'
+            .map(line -> line.substring(2)) // Strip '##'
             .map(String::trim)
             .collect(Collectors.joining("\n"));
 
-        final UsageParser usageParser = new UsageParser(this.node);
-        final Set<GlobalUsage> usedGlobals = this.configuration.getMagikIndexerIndexUsages()
+    final UsageParser usageParser = new UsageParser(this.node);
+    final Set<GlobalUsage> usedGlobals =
+        this.configuration.getMagikIndexerIndexUsages()
             ? usageParser.getUsedGlobals()
             : Collections.emptySet();
-        final Set<MethodUsage> usedMethods = this.configuration.getMagikIndexerIndexUsages()
+    final Set<MethodUsage> usedMethods =
+        this.configuration.getMagikIndexerIndexUsages()
             ? usageParser.getUsedMethods()
             : Collections.emptySet();
-        final Set<SlotUsage> usedSlots = this.configuration.getMagikIndexerIndexUsages()
+    final Set<SlotUsage> usedSlots =
+        this.configuration.getMagikIndexerIndexUsages()
             ? usageParser.getUsedSlots()
             : Collections.emptySet();
-        final Set<ConditionUsage> usedConditions = this.configuration.getMagikIndexerIndexUsages()
+    final Set<ConditionUsage> usedConditions =
+        this.configuration.getMagikIndexerIndexUsages()
             ? usageParser.getUsedConditions()
             : Collections.emptySet();
 
-        final MethodDefinition methodDefinition = new MethodDefinition(
+    final MethodDefinition methodDefinition =
+        new MethodDefinition(
             location,
             moduleName,
             doc,
@@ -153,73 +159,67 @@ public class MethodDefinitionParser {
             usedMethods,
             usedSlots,
             usedConditions);
-        return List.of(methodDefinition);
+    return List.of(methodDefinition);
+  }
+
+  private List<ParameterDefinition> createParameterDefinitions(
+      final @Nullable String moduleName,
+      final @Nullable AstNode parametersNode,
+      final Map<String, TypeString> parameterTypes) {
+    if (parametersNode == null) {
+      return Collections.emptyList();
     }
 
-    private List<ParameterDefinition> createParameterDefinitions(
-            final @Nullable String moduleName,
-            final @Nullable AstNode parametersNode,
-            final Map<String, TypeString> parameterTypes) {
-        if (parametersNode == null) {
-            return Collections.emptyList();
-        }
+    final URI uri = this.node.getToken().getURI();
+    final List<ParameterDefinition> parameterDefinitions = new ArrayList<>();
+    for (final AstNode parameterNode : parametersNode.getChildren(MagikGrammar.PARAMETER)) {
+      final Location location = new Location(uri, parameterNode);
 
-        final URI uri = this.node.getToken().getURI();
-        final List<ParameterDefinition> parameterDefinitions = new ArrayList<>();
-        for (final AstNode parameterNode : parametersNode.getChildren(MagikGrammar.PARAMETER)) {
-            final Location location = new Location(uri, parameterNode);
+      final AstNode identifierNode = parameterNode.getFirstChild(MagikGrammar.IDENTIFIER);
+      final String identifier = identifierNode.getTokenValue();
 
-            final AstNode identifierNode = parameterNode.getFirstChild(MagikGrammar.IDENTIFIER);
-            final String identifier = identifierNode.getTokenValue();
+      final ParameterNodeHelper helper = new ParameterNodeHelper(parameterNode);
+      final ParameterDefinition.Modifier modifier;
+      if (helper.isOptionalParameter()) {
+        modifier = ParameterDefinition.Modifier.OPTIONAL;
+      } else if (helper.isGatherParameter()) {
+        modifier = ParameterDefinition.Modifier.GATHER;
+      } else {
+        modifier = ParameterDefinition.Modifier.NONE;
+      }
 
-            final ParameterNodeHelper helper = new ParameterNodeHelper(parameterNode);
-            final ParameterDefinition.Modifier modifier;
-            if (helper.isOptionalParameter()) {
-                modifier = ParameterDefinition.Modifier.OPTIONAL;
-            } else if (helper.isGatherParameter()) {
-                modifier = ParameterDefinition.Modifier.GATHER;
-            } else {
-                modifier = ParameterDefinition.Modifier.NONE;
-            }
+      final TypeString typeRef = parameterTypes.getOrDefault(identifier, TypeString.UNDEFINED);
 
-            final TypeString typeRef = parameterTypes.getOrDefault(identifier, TypeString.UNDEFINED);
-
-            final ParameterDefinition parameterDefinition = new ParameterDefinition(
-                location,
-                moduleName,
-                null,
-                parameterNode,
-                identifier,
-                modifier,
-                typeRef);
-            parameterDefinitions.add(parameterDefinition);
-        }
-
-        return parameterDefinitions;
+      final ParameterDefinition parameterDefinition =
+          new ParameterDefinition(
+              location, moduleName, null, parameterNode, identifier, modifier, typeRef);
+      parameterDefinitions.add(parameterDefinition);
     }
 
-    @CheckForNull
-    private ParameterDefinition createAssignmentParameterDefinition(
-            final @Nullable String moduleName,
-            final @Nullable AstNode assignmentParameterNode,
-            final Map<String, TypeString> parameterTypes) {
-        if (assignmentParameterNode == null) {
-            return null;
-        }
+    return parameterDefinitions;
+  }
 
-        final AstNode parameterNode = assignmentParameterNode.getFirstChild(MagikGrammar.PARAMETER);
-        final URI uri = this.node.getToken().getURI();
-        final Location location = new Location(uri, parameterNode);
-        final String identifier = parameterNode.getTokenValue();
-        final TypeString typeRef = parameterTypes.getOrDefault(identifier, TypeString.UNDEFINED);
-        return new ParameterDefinition(
-            location,
-            moduleName,
-            null,
-            parameterNode,
-            identifier,
-            ParameterDefinition.Modifier.NONE,
-            typeRef);
+  @CheckForNull
+  private ParameterDefinition createAssignmentParameterDefinition(
+      final @Nullable String moduleName,
+      final @Nullable AstNode assignmentParameterNode,
+      final Map<String, TypeString> parameterTypes) {
+    if (assignmentParameterNode == null) {
+      return null;
     }
 
+    final AstNode parameterNode = assignmentParameterNode.getFirstChild(MagikGrammar.PARAMETER);
+    final URI uri = this.node.getToken().getURI();
+    final Location location = new Location(uri, parameterNode);
+    final String identifier = parameterNode.getTokenValue();
+    final TypeString typeRef = parameterTypes.getOrDefault(identifier, TypeString.UNDEFINED);
+    return new ParameterDefinition(
+        location,
+        moduleName,
+        null,
+        parameterNode,
+        identifier,
+        ParameterDefinition.Modifier.NONE,
+        typeRef);
+  }
 }
